--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.3.1",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
